# Space-Weather-Aggregator

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/api/: asteroids.py  iss.py  nasa.py  noaa.py  radiation.py  solar_wind.py
app/locales/: en.json  ru.json
app/services/: cache.py  collector.py  scheduler.py
app/static/: manifest.json
app/static/css/: globe.css  style.css
app/static/js/: app.js  globe.js  sw.js
app/static/locales/: en.json  ru.json
app/templates/: globe.html  index.html
data/: cache.json  kp_history.json
tests/: conftest.py  test_iss.py  test_nasa.py  test_noaa.py
