[project]
name = "space-weather-aggregator-main"
version = "0.1.0"
description = ""
authors = [
    {name = "say-boop",email = "say284821@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.137.2,<0.138.0)",
    "uvicorn[standard] (>=0.49.0,<0.50.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "folium (>=0.20.0,<0.21.0)",
    "schedule (>=1.2.2,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "redis (>=8.0.0,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.0,<10.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
